Colaboratory を使用して作成しました

--- a/notebooks/colab.ipynb
+++ b/notebooks/colab.ipynb
@@ -1,52 +1,75 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.7.5"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3
- },
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "Hello\n"
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "language_info": {
+      "name": "python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "version": "3.7.5"
+    },
+    "orig_nbformat": 2,
+    "file_extension": ".py",
+    "mimetype": "text/x-python",
+    "name": "python",
+    "npconvert_exporter": "python",
+    "pygments_lexer": "ipython3",
+    "version": 3,
+    "colab": {
+      "name": "colab.ipynb",
+      "provenance": []
     }
-   ],
-   "source": [
-    "print('Hello')"
-   ]
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ]
+  "cells": [
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eFDG-MNxHldI",
+        "colab_type": "code",
+        "colab": {},
+        "outputId": "1c1d066f-e5b4-400e-b925-4d92bb7f5eca"
+      },
+      "source": [
+        "print('Hello')"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Hello\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "baKZ8k5gHldP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4oxO2ERhHldS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
 }
